   of intensity, similar to Kinhom.

   o Kest
   New option: correction="rigid" computes the rigid motion correction.

   o eval.fv
   Functions no longer need to have exactly the same sequence of 'r' values.
   They will now be made compatible using 'harmonise.fv'.

   o crosspaircounts
   Results may change slightly due to a change in handling numerical 
   rounding effects.

   o scanpp 
   Upgraded to handle multiple columns of mark data.

   o circumradius
   The function 'circumradius' is now generic, with methods
   for the classes 'owin' and 'linnet'.

   o edge.Trans
   New argument 'give.rmax' 

   o fvnames, plot.fv
   The symbol '.a' is now recognised. It stands for 'all function values'.

   o as.function.fv
   Argument 'extrapolate' can have length 1 or 2.

   o varblock
   New argument 'confidence' determines the confidence level.

   o $<-.fv
   This can now be used to add an extra column to an 'fv' object
   (previously it refused).

   o minnndist, maxnndist
   New argument 'positive'. If TRUE, coincident points are ignored:
   the nearest-neighbour distance of a point is the distance to the
   nearest point that does not coincide with the current point.

   o plot.fv
   Improved handling of 'shade' argument.

   o Kmeasure
   Now passes '...' arguments to as.mask()

   o Ksector
   Now allows start < 0.  
   New arguments 'units' and 'domain'.

   o pairorient
   New arguments 'units' and 'domain'.

   o eroded.areas
   New argument 'subset'

   o disc
   New argument 'delta' 

   o harmonise.fv, harmonise.im
   These are now methods for the new generic 'harmonise'

   o Fest, Gest
   These functions now also compute the theoretical value of hazard
   for a Poisson process, if correction = "km".

BUG FIXES

   o varblock
   Calculations were incorrect if more than one column of 
   edge corrections was computed. 
   [Bug introduced in spatstat 1.21-1, november 2010.]
   Fixed.

   o varblock