@@ -772,6 +772,7 @@ export("[<-.fv")
 export("[.fv")
 export("$<-.fv")
 export("fv")
+export("fvexprmap")
 export("fvlabelmap")
 export("fvlabels<-")
 export("fvlabels")
