@@ -4,32 +4,35 @@
 #	S function empty.space()
 #	Computes estimates of the empty space function
 #
-#	$Revision: 4.33 $	$Date: 2014/09/24 04:47:38 $
+#	$Revision: 4.34 $	$Date: 2014/09/26 06:30:23 $
 #
 "Fest" <- 	
 "empty.space" <-
 function(X, ..., eps = NULL, r=NULL, breaks=NULL,
-         correction=c("rs", "km", "cs")) {
+         correction=c("rs", "km", "cs"),
+         domain=NULL) {
   verifyclass(X, "ppp")
+
+  if(!is.null(domain))
+      stopifnot(is.subset.owin(domain, Window(X)))
   
-# Intensity estimate
+  ## Intensity estimate
   W <- X$window
   npts <- npoints(X)
   lambda <- npts/area.owin(W)
   
-# First discretise
+  ## First discretise
   dwin <- as.mask(W, eps=eps)
   dX <- ppp(X$x, X$y, window=dwin, check=FALSE)
-#        
-# histogram breakpoints 
-#
+
+  ## histogram breakpoints 
   rmaxdefault <- rmax.rule("F", dwin, lambda)
   breaks <- handle.r.b.args(r, breaks, dwin, eps, 
                                   rmaxdefault=rmaxdefault)
   rvals <- breaks$r
   rmax  <- breaks$max
   
-# choose correction(s)
+  ## choose correction(s)
   correction.given <- !missing(correction) && !is.null(correction)
   if(is.null(correction)) {
     correction <- c("rs", "km", "cs")
@@ -47,7 +50,7 @@ function(X, ..., eps = NULL, r=NULL, breaks=NULL,
                              best="km"),
                            multi=TRUE)
   
-# initialise fv object
+  ## initialise fv object
   df <- data.frame(r=rvals, theo=1-exp(-lambda * pi * rvals^2))
   Z <- fv(df, "r", substitute(F(r), NULL), "theo", . ~ r,
           c(0,rmax),
@@ -56,34 +59,43 @@ function(X, ..., eps = NULL, r=NULL, breaks=NULL,
           fname="F")
   nr <- length(rvals)
   zeroes <- numeric(nr)
-#
-#  compute distances and censoring distances
+
+  ##  compute distances and censoring distances
   if(X$window$type == "rectangle") {
-    # original data were in a rectangle
-    # output of exactdt() is sufficient
+    ## original data were in a rectangle
+    ## output of exactdt() is sufficient
     e <- exactdt(dX)
     dist <- e$d
     bdry <- e$b
+    if(!is.null(domain)) {
+      ok <- inside.owin(raster.xy(e$w), , domain)
+      dist <- dist[ok]
+      bdry <- bdry[ok]
+    }
   } else {
-    # window is irregular..
+    ## window is irregular..
     # Distance transform & boundary distance for all pixels
     e <- exactdt(dX)
     b <- bdist.pixels(dX$window, style="matrix")
-    # select only those pixels inside mask
+    ## select only those pixels inside mask
     mm <- dwin$m
+    if(!is.null(domain)) {
+      ok <- inside.owin(raster.xy(e$w), , domain)
+      mm <- as.vector(mm) & ok
+    }
     dist <- e$d[mm]
     bdry <- b[mm]
   }
   
-# censoring indicators
+  ## censoring indicators
   d <- (dist <= bdry)
-#  observed distances
+  ##  observed distances
   o <- pmin.int(dist, bdry)
 
-### start calculating estimates of F
+  ## start calculating estimates of F
   
   if("none" %in% correction) {
-    #  UNCORRECTED e.d.f. of empty space distances
+    ##  UNCORRECTED e.d.f. of empty space distances
     if(npts == 0)
       edf <- zeroes
     else {
@@ -95,20 +107,20 @@ function(X, ..., eps = NULL, r=NULL, breaks=NULL,
   }
   
   if("cs" %in% correction) {
-    # Chiu-Stoyan correction
+    ## Chiu-Stoyan correction
     if(npts == 0)
       cs <- zeroes
     else {
-      #  uncensored distances
+      ##  uncensored distances
       x <- dist[d]
-      #  weights
+      ##  weights
       a <- eroded.areas(W, rvals)
-      # calculate Hanisch estimator
+      ## calculate Hanisch estimator
       h <- hist(x[x <= rmax], breaks=breaks$val, plot=FALSE)$counts
       H <- cumsum(h/a)
       cs <- H/max(H[is.finite(H)])
     }
-    # add to fv object
+    ## add to fv object
     Z <- bind.fv(Z, data.frame(cs=cs),
                  "hat(%s)[cs](r)", 
                  "Chiu-Stoyan estimate of %s",
@@ -116,7 +128,7 @@ function(X, ..., eps = NULL, r=NULL, breaks=NULL,
   }
 
   if(any(correction %in% c("rs", "km"))) {
-    # calculate Kaplan-Meier and/or border corrected (Reduced Sample) estimators
+    ## calculate Kaplan-Meier and/or border corrected (Reduced Sample) estimators
     want.rs <- "rs" %in% correction
     want.km <- "km" %in% correction
     selection <- c(want.rs, want.km, want.km, want.km)
@@ -135,19 +147,19 @@ function(X, ..., eps = NULL, r=NULL, breaks=NULL,
       result$theohaz <- 2 * pi * lambda * rvals
       result <- as.data.frame(result[tags])
     }
-    # add to fv object
+    ## add to fv object
     Z <- bind.fv(Z, result,
                  labels, descr, if(want.km) "km" else "rs")
   }
   
-  # wrap up
+  ## wrap up
   unitname(Z) <- unitname(X)
   
-  # remove 'hazard' from the dotnames
+  ## remove 'hazard' from the dotnames
   nama <- names(Z)
   fvnames(Z, ".") <- rev(setdiff(nama, c("r", "hazard", "theohaz")))
   
-  # determine recommended plot range
+  ## determine recommended plot range
   attr(Z, "alim") <- with(Z, range(.x[is.finite(.y) & .y <= 0.9]))
 
   return(Z)
